<resources>
    <string name="app_name">Cel-Far</string>
    <string name="intro">Hello,you can use this application to check your skills on temperature coversion,or calculate the correct value.</string>
    <string name="che">Check</string>
    <string name="cal">Calculate</string>
    <string name="go">Go!</string>
    <string name="fah"> Farenheit</string>
    <string name="cel"> Celcius</string>
    <string name="title_activity_seccond">SeccondActivity</string>
    <string name="wrong">Oops!,your answer is wrong you may try again.</string>
    <string name="br"> Return</string>
    <string name="preintro">Set the numbers precision</string>
    <string name="seekno">None</string>
    <string name="seekful">Full</string>
    <string name="can">Cancel</string>
    <string name="ok">OK</string>







</resources>
