<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.madaim.ex8good.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="320dp"
        android:layout_height="70dp"
        android:text="@string/intro"
        android:textSize="16dp"
        />

    <RadioGroup
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_below="@id/textView"
        android:id="@+id/radioGroup"
        android:orientation="vertical"
        >

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/che"
            android:onClick="onRadioButtonClicked"
             />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            android:layout_weight="1"
            android:text="@string/cal"
            android:onClick="onRadioButtonClicked"

            />
    </RadioGroup>

    <EditText
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/radioGroup"
        android:layout_marginStart="59dp"
        android:layout_marginTop="55dp"
        android:id="@+id/editText" />

    <Button
        android:id="@+id/button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/editText"
        android:layout_centerHorizontal="true"
        android:text="@string/go"
        android:enabled="false"
        android:onClick="sendMessage"

         />

    <EditText
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/button"
        android:layout_alignBottom="@+id/button"
        android:layout_alignEnd="@+id/textView"
        android:id="@+id/editText2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button"
        android:layout_alignStart="@+id/editText"
        android:text="@string/fah"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignStart="@+id/editText2"
        android:text="@string/cel" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/radioGroup"
        android:layout_alignParentEnd="true"
        android:src="@mipmap/ic_launcher_foreground" />


</RelativeLayout>
